--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,20 @@ on: [push]
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  
     steps:
       - uses: actions/checkout@v3
-      - run: npm install && npm run build
-      - uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: false  
+          
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        
+      - run: npm install && npm run build
+        
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }} 
           publish_dir: ./dist
