--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,31 @@
-name: Build Vue
-on: [push]
+name: Deploy Vue App to GitHub Pages
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
-  build_vue:
+  build:
     runs-on: ubuntu-latest
-    name: Build Vue
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Vue App to Github Pages
-        uses: StruggleYang/VuePagesAction@2.0.0
-        with:
-          useyarn: true # if project is npm build ,set false
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '22' 
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build Vue project
+      run: npm run build
+
+    - name: Deploy to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        branch: gh-pages
+        folder: dist
